Removed button tags and moved its class to the a tag Added twitter meta

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/aboutme" rel="canonical">
+    <meta content="Welcome to Allyce's silly little website :)" name="description"/>
+    
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/aboutme" property="og:url"/>
     <meta content="Allyce's Website" property="og:title"/>
     <meta content="Allyce's Website" property="og:site_name">
     <meta content="Welcome to Allyce's silly little website :)" property="og:description"/>
-    <meta content="Welcome to Allyce's silly little website :)" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -28,94 +36,75 @@
     <h1 class="title">
         About me
     </h1>
-    <a href="https://en.pronouns.page/@Allyce">
-        <button class="btn pronoun">
-            <img alt="" class="invert" src="/thumbnails/pronounsdotpage.svg">
-            Personal
-        </button>
-    </a>
-    <br><br>
+    <a class="btn pronoun" href="https://en.pronouns.page/@Allyce">
+        <img alt="" class="invert" src="/thumbnails/pronounsdotpage.svg">
+        Personal
+    </a><br><br>
     <p>
         <b>Interests</b>
-    </p><a href="/games">
-    <button class="btn white">
+    </p>
+    <a class="btn white" href="/games">
         <img alt="" class="invert" src="/thumbnails/controller.png"> Games
-    </button>
-</a><br><a href="https://github.com/AllyToAll/AllyToAll.github.io">
-    <button class="btn github">
+    </a><br>
+    <a class="btn github" href="https://github.com/AllyToAll/AllyToAll.github.io">
         <img alt="" class="invert" src="/thumbnails/github.svg">
         Programming
-    </button>
-</a><br><br>
+    </a><br><br>
     <p>
         <b>Political Views</b>
-    </p><a href="https://en.wikipedia.org/wiki/Anarchist_synthesis">
-    <button class="btn white">
+    </p>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Anarchist_synthesis">
         <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Anarchist Synthesis
-    </button>
-</a><br><a href="https://en.wikipedia.org/wiki/Social_anarchism">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Social_anarchism">
         <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Social Anarchism
-    </button>
-</a><br><a href="https://en.wikipedia.org/wiki/Anarchist_communism">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Anarchist_communism">
         <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Anarcho Communism
-    </button>
-</a><br><a href="https://en.wikipedia.org/wiki/Queer_anarchism">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Queer_anarchism">
         <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Queer Anarchism
-    </button>
-</a><br><a href="https://en.wikipedia.org/wiki/Anarcha-feminism">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Anarcha-feminism">
         <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Anarcha Feminism
-    </button>
-</a><br><br>
+    </a><br><br>
     <p>
         <b>Phisophical Views</b>
-    </p><a href="https://en.wikipedia.org/wiki/Scientism">
-    <button class="btn white">
+    </p>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Scientism">
         <img alt="" class="invert" src="/thumbnails/wikipedia.svg">
         Scientism 🧑‍🔬
-    </button>
-</a><br><br>
-    <a href="/thumbnails/pfp.jpg">
-        <button class="btn gray">
-            <img alt="" src="/thumbnails/pfp.jpg">
-            <b>Symbols on my profile picture</b>
-        </button>
+    </a><br><br>
+    <a class="btn gray" href="/thumbnails/pfp.jpg">
+        <img alt="" src="/thumbnails/pfp.jpg">
+        <b>Symbols on my profile picture</b>
     </a>
-    <a href="https://en.wikipedia.org/wiki/Industrial_Workers_of_the_World">
-        <button class="btn white">
-            <img alt="" class="invert" src="/thumbnails/Anarchist_black_cat.svg"/>
-            Sabotabby
-        </button>
-    </a><br><a
-        href="https://en.wikipedia.org/wiki/International_Revolutionary_People's_Guerrilla_Forces#The_Queer_Insurrection_and_Liberation_Army">
-    <button class="btn white">
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Industrial_Workers_of_the_World">
+        <img alt="" class="invert" src="/thumbnails/Anarchist_black_cat.svg"/>
+        Sabotabby
+    </a><br>
+    <a class="btn white"
+       href="https://en.wikipedia.org/wiki/International_Revolutionary_People's_Guerrilla_Forces#The_Queer_Insurrection_and_Liberation_Army">
         <img alt="" class="invert" src="/thumbnails/TQILA_Flag_nobackground.svg"/>
         TQILA
-    </button>
-</a><br><a href="https://en.wikipedia.org/wiki/Three_Arrows">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Three_Arrows">
         <img alt="" class="invert" src="/thumbnails/Two_Arrows.svg"/>
         Three Arrows (Minus One)
-    </button>
-</a><br><a href="https://en.wikipedia.org/wiki/Non-binary">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Non-binary">
         <img alt="MOREmoji Nonbinary" src="/thumbnails/MOREmoji_nonbinary.svg"/>
         Nonbinary Pride Flag
-    </button>
-</a><br><a href="https://en.wikipedia.org/wiki/Anarchist_symbolism#Black_flag">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="https://en.wikipedia.org/wiki/Anarchist_symbolism#Black_flag">
         <img alt="" src="/thumbnails/anarchy.svg">
         Anarchist Bisected Flag
-    </button>
-</a><br><br>
+    </a><br><br>
     <p>
         <b>Cool facts</b>
         <br>I am atheist
@@ -123,11 +112,10 @@
         shark plush toy)
         <br>My favourite dinosaur is the Ankylosaurus 🦖
         <br>My favourite colour is pink 🩷
-    </p><br><a href="/">
-    <button class="btn gray">
+    </p><br>
+    <a class="btn gray" href="/">
         Return
-    </button>
-</a>
+    </a>
 </div>
 </body>
 </html>
