--- a/discord/index.html
+++ b/discord/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/discord" rel="canonical">
+    <meta content="Allyce's Discord Profile" name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/discord" property="og:url"/>
     <meta content="Discord" property="og:title"/>
     <meta content="Discord" property="og:site_name">
     <meta content="Allyce's Discord Profile" property="og:description"/>
-    <meta content="Allyce's Discord Profile" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/discord.svg" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -24,17 +32,14 @@
 </head>
 <body class="background">
 <div class="input">
-    <a href="https://discord.com/users/406481120641810433">
-        <button class="btn white">
-            <img alt=""
-                 class="invert" src="/thumbnails/discord.svg">
-            My Discord is <code>allyce.</code>
-        </button>
+    <a class="btn white" href="https://discord.com/users/406481120641810433">
+        <img alt=""
+             class="invert" src="/thumbnails/discord.svg">
+        My Discord is <code>allyce.</code>
     </a>
-    <a href="/">
-        <button class="btn gray">
-            Return
-        </button>
-    </a></div>
+    <a class="btn gray" href="/">
+        Return
+    </a>
+</div>
 </body>
 </html>
