--- a/gpg/index.html
+++ b/gpg/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/gpg" rel="canonical">
+    <meta content="Allyce's GPG Key" name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/gpg" property="og:url"/>
     <meta content="GPG Key" property="og:title"/>
     <meta content="GPG Key" property="og:site_name">
     <meta content="Allyce's GPG Key" property="og:description"/>
-    <meta content="Allyce's GPG Key" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/gnuprivacyguard.svg" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -27,20 +35,14 @@
     <a class="title">
         GnuPG Public Key
     </a><br>
-    <a href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/publickey.asc">
-        <button class="btn green">
-            View
-        </button>
+    <a class="btn green" href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/publickey.asc">
+        View
     </a>
-    <a href="/publickey.asc">
-        <button class="btn blue">
-            Download
-        </button>
+    <a class="btn blue" href="/publickey.asc">
+        Download
     </a>
-    <a href="/">
-        <button class="btn gray">
-            Return
-        </button>
+    <a class="btn gray" href="/">
+        Return
     </a>
 </div>
 </body>
