--- a/likes/index.html
+++ b/likes/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/likes" rel="canonical">
+    <meta content="Things I like :3" name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/likes" property="og:url"/>
     <meta content="Likes" property="og:title"/>
     <meta content="Likes" property="og:site_name">
     <meta content="Things I like :3" property="og:description"/>
-    <meta content="Things I like :3" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -30,23 +38,17 @@
     <p>
         Not trapped in my body but your perception
     </p>
-    <a href="https://www.instagram.com/p/BuC6gCphRfi">
-        <button class="btn gray">
-            Inspiration
-        </button>
+    <a class="btn gray" href="https://www.instagram.com/p/BuC6gCphRfi">
+        Inspiration
     </a><br><br>
     <p>
         I'm not debating my right to exist with you, get bent.
     </p><br>
-    <a href="https://clarion.unity-struggle-unity.org/2024-07-22-communists-and-the-queer-question/">
-        <button class="btn red">
-            Funny USSR Pride Flag
-        </button>
+    <a class="btn red" href="https://clarion.unity-struggle-unity.org/2024-07-22-communists-and-the-queer-question/">
+        Funny USSR Pride Flag
     </a><br><br>
-    <a href="/">
-        <button class="btn gray">
-            Return
-        </button>
+    <a class="btn gray" href="/">
+        Return
     </a>
 </div>
 </body>
