--- a/links/index.html
+++ b/links/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/links" rel="canonical">
+    <meta content="Allyce's Links" name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/links" property="og:url"/>
     <meta content="Links" property="og:title"/>
     <meta content="Links" property="og:site_name">
     <meta content="Allyce's Links" property="og:description"/>
-    <meta content="Allyce's Links" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/links.png" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -24,62 +32,50 @@
 </head>
 <body class="background">
 <div class="input">
-    <a href="https://onlyfans.com/allyce.xoxox">
-        <button class="btn onlyfans">
-            <img alt="" class="invert" src="/thumbnails/onlyfans.svg">
-            OnlyFans
-        </button>
-    </a><br><br><a href="https://bsky.app/profile/allyce1.bsky.social">
-    <button class="btn bluesky">
+    <a class="btn onlyfans" href="https://onlyfans.com/allyce.xoxox">
+        <img alt="" class="invert" src="/thumbnails/onlyfans.svg">
+        OnlyFans
+    </a><br><br>
+    <a class="btn bluesky" href="https://bsky.app/profile/allyce1.bsky.social">
         <img alt="" class="invert" src="/thumbnails/bluesky.svg">
         Bluesky
-    </button>
-</a><a href="https://github.com/AllyToAll">
-    <button class="btn github">
+    </a>
+    <a class="btn github" href="https://github.com/AllyToAll">
         <img alt="" class="invert" src="/thumbnails/github.svg">
         GitHub
-    </button>
-</a><a href="https://it.pinterest.com/allytoall">
-    <button class="btn pinterest">
+    </a>
+    <a class="btn pinterest" href="https://it.pinterest.com/allytoall">
         <img alt="" class="invert" src="/thumbnails/pinterest.svg">
         Pinterest
-    </button>
-</a><a href="https://www.reddit.com/u/Allyce3642">
-    <button class="btn reddit">
+    </a>
+    <a class="btn reddit" href="https://www.reddit.com/u/Allyce3642">
         <img alt="" class="invert" src="/thumbnails/reddit.svg">
         Reddit
-    </button>
-</a><a href="https://signal.me/#eu/T56AHc1JKr4oTX8Y66D8ELfZX_SgwNM2aYjM0735WXMVpumgYLpGzZvSO-ru_PqO">
-    <button class="btn signal">
+    </a>
+    <a class="btn signal" href="https://signal.me/#eu/T56AHc1JKr4oTX8Y66D8ELfZX_SgwNM2aYjM0735WXMVpumgYLpGzZvSO-ru_PqO">
         <img alt="" class="invert" src="/thumbnails/signal.svg">
         Signal
-    </button>
-</a><a href="https://allyce3642.tumblr.com">
-    <button class="btn tumblr">
+    </a>
+    <a class="btn tumblr" href="https://allyce3642.tumblr.com">
         <img alt="" class="invert" src="/thumbnails/tumblr.svg">
         Tumblr
-    </button>
-</a><a href="https://twitch.tv/allyce3642">
-    <button class="btn twitch">
+    </a>
+    <a class="btn twitch" href="https://twitch.tv/allyce3642">
         <img alt="" class="invert" src="/thumbnails/twitch.svg">
         Twitch
-    </button>
-</a><a href="https://www.youtube.com/@allyce3642">
-    <button class="btn youtube">
+    </a>
+    <a class="btn youtube" href="https://www.youtube.com/@allyce3642">
         <img alt="" class="invert" src="/thumbnails/youtube.svg">
         YouTube
-    </button>
-</a><a href="https://www.xiaohongshu.com/user/profile/678846fd0000000008019588">
-    <button class="btn xhs">
+    </a>
+    <a class="btn xhs" href="https://www.xiaohongshu.com/user/profile/678846fd0000000008019588">
         <img alt="" class="invert" src="/thumbnails/xiaohongshu.svg">
         Xiaohongshu
-    </button>
-</a><a href="https://girldick.gay/@Allyce">
-    <button class="btn mastodon">
+    </a>
+    <a class="btn mastodon" href="https://girldick.gay/@Allyce">
         <img alt="" class="invert" src="/thumbnails/mastodon.svg">
         Mastodon
-    </button>
-</a><br><br>
+    </a><br><br>
     <div class="btn activision">
         <img alt="" class="invert" src="/thumbnails/activision.svg">
         Activision / Call of Duty - <code>Allyce#1744697</code><br>
@@ -90,10 +86,8 @@
         Nebula Starbreeze (Payday 3) - <code>Allyce</code><br>
     </div>
     <br>
-    <a href="/">
-        <button class="btn gray">
-            Return
-        </button>
+    <a class="btn gray" href="/">
+        Return
     </a>
 </div>
 </body>
