--- a/apcs/index.html
+++ b/apcs/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/apcs" rel="canonical">
+    <meta content="Allyce's Power Corp Scraper visual example" name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/apcs" property="og:url"/>
     <meta content="Allyce's Power Corp Scraper" property="og:title"/>
     <meta content="Allyce's Power Corp Scraper" property="og:site_name">
     <meta content="Allyce's Power Corp Scraper visual example" property="og:description"/>
-    <meta content="Allyce's Power Corp Scraper visual example" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -29,11 +37,11 @@
         src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSMe71TDHVfoAIVikX0W5E4Tk1OJScFCCfb27fqd3i__VF1whXuReAHX_yHJRdSezvCC4XU0rZ0g-e7/pubhtml?widget=true&headers=false">
 </iframe>
 <div class="page-footer">
-    <a href="/">
-        <button class="btn gray">To Allyce's Website</button>
+    <a class="btn gray" href="/">
+        To Allyce's Website
     </a>
-    <a href="https://github.com/AllyToAll/AllycePowerCorpScraper">
-        <button class="btn gray">To AllycePowerCorpScraper</button>
+    <a class="btn gray" href="https://github.com/AllyToAll/AllycePowerCorpScraper">
+        To AllycePowerCorpScraper
     </a>
 </div>
 </body>
