--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/blahaj" rel="canonical">
+    <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
+          name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/blahaj" property="og:url"/>
     <meta content="Blahaj" property="og:title"/>
     <meta content="Blahaj" property="og:site_name">
     <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
           property="og:description"/>
-    <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
-          name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.svg" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <meta content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" http-equiv="refresh">
 
