--- a/code/index.html
+++ b/code/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/code" rel="canonical">
+    <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
+          name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/code" property="og:url"/>
     <meta content="Source Code" property="og:title"/>
     <meta content="Source Code" property="og:site_name">
     <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
           property="og:description"/>
-    <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
-          name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <meta content="0; url=https://github.com/AllyToAll/AllyToAll.github.io" http-equiv="refresh">
 
