--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/" rel="canonical">
+    <meta content="Welcome to Allyce's silly little website :)" name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/" property="og:url"/>
     <meta content="Allyce's Website" property="og:title"/>
     <meta content="Allyce's Website" property="og:site_name">
     <meta content="Welcome to Allyce's silly little website :)" property="og:description"/>
-    <meta content="Welcome to Allyce's silly little website :)" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="https://girldick.gay/@Allyce" rel="me">
 
@@ -30,60 +38,48 @@
     <h1 class="title">
         Welcome to Allyce's silly little website :)
     </h1>
-    <a href="/aboutme">
-        <button class="btn white">
-            About me
-        </button>
-    </a><br><a href="/pronouns">
-    <button class="btn pronoun">
+    <a class="btn white" href="/aboutme">
+        About me
+    </a><br>
+    <a class="btn pronoun" href="/pronouns">
         <img alt="" class="invert" src="/thumbnails/pronounsdotpage.svg"> Pronouns
-    </button>
-</a><br><a href="/links">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="/links">
         <svg class="bi bi-link" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
              xmlns="http://www.w3.org/2000/svg">
             <path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9q-.13 0-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
             <path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4 4 0 0 1-.82 1H12a3 3 0 1 0 0-6z"/>
         </svg>
         Links
-    </button>
-</a><br><a href="/games">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="/games">
         <img alt="" class="invert" src="/thumbnails/controller.png"> Games
-    </button>
-</a><br><a href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
-    <button class="btn blahaj">
+    </a><br>
+    <a class="btn blahaj" href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
         <img alt="" src="/thumbnails/Blobhaj_Default.svg"> Blåhaj
-    </button>
-</a><br><a href="/discord">
-    <button class="btn discord">
+    </a><br>
+    <a class="btn discord" href="/discord">
         <img alt="" class="invert" src="/thumbnails/discord.svg">
         Discord
-    </button>
-</a><br><a href="/likes">
-    <button class="btn white">
+    </a><br>
+    <a class="btn white" href="/likes">
         Things I liked
-    </button>
-</a><br><a href="/gpg">
-    <button class="btn gpg">
+    </a><br>
+    <a class="btn gpg" href="/gpg">
         <img alt=""
              class="invert" src="/thumbnails/gnuprivacyguard.svg">
         GnuPG Public Key
-    </button>
-</a><br><a href="https://github.com/AllyToAll/AllyToAll.github.io">
-    <button class="btn github">
+    </a><br>
+    <a class="btn github" href="https://github.com/AllyToAll/AllyToAll.github.io">
         <img alt="" class="invert" src="/thumbnails/github.svg">
         Website's GitHub Repository
-    </button>
-</a><br><a href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/LICENSE">
-    <button class="btn gray">
+    </a><br>
+    <a class="btn gray" href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/LICENSE">
         Licence
-    </button>
-</a><br><a href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/CREDITS.md">
-    <button class="btn gray">
+    </a><br>
+    <a class="btn gray" href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/CREDITS.md">
         Credits
-    </button>
-</a>
+    </a>
 </div>
 </body>
 </html>
