--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -2,15 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
+    <link href="https://allytoall.github.io/pronouns" rel="canonical">
+    <meta content="Allyce's Pronoun Page" name="description"/>
 
     <meta content="website" property="og:type"/>
-    <link href="https://allytoall.github.io/pronouns" rel="canonical">
     <meta content="https://allytoall.github.io/pronouns" property="og:url"/>
     <meta content="Pronouns" property="og:title"/>
     <meta content="Pronouns" property="og:site_name">
     <meta content="Allyce's Pronoun Page" property="og:description"/>
-    <meta content="Allyce's Pronoun Page" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/pronounsdotpage.svg" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -30,8 +38,8 @@
         src="https://en.pronouns.page/card/@Allyce">
 </iframe>
 <div class="page-footer">
-    <a href="/">
-        <button class="btn gray">Return</button>
+    <a class="btn gray" href="/">
+        Return
     </a>
 </div>
 </body>
