--- a/studies/index.html
+++ b/studies/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
 
-    <meta content="website" property="og:type"/>
     <link href="https://allytoall.github.io/studies" rel="canonical">
+    <meta content="A page containing a bunch of studies" name="description"/>
+
+    <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/studies" property="og:url"/>
     <meta content="Studies" property="og:title"/>
     <meta content="Studies" property="og:site_name">
     <meta content="A page containing a bunch of studies" property="og:description"/>
-    <meta content="A page containing a bunch of studies" name="description"/>
     <meta content="https://allytoall.github.io/thumbnails/studies.png" property="og:image"/>
+
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="@AllyToAll1" name="twitter:site">
+    <meta content="@AllyToAll1" name="twitter:creator">
+    <meta content="Allyce's Website" name="twitter:title">
+    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -33,10 +41,8 @@
 <section class="mb-6 text-[11pt]" id="filters"></section>
 <hr class="mb-6">
 <main class="space-y-6" id="content"></main>
-<a class="no-underline" href="/">
-    <button class="btn gray">
-        Return
-    </button>
+<a class="btn gray no-underline" href="/">
+    Return
 </a>
 </body>
 </html>
