--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -18,9 +18,10 @@
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
-    <meta content="Allyce's Website" name="twitter:title">
-    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
+    <meta content="Blahaj" name="twitter:title">
+    <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
+          name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.svg" name="twitter:image">
 
     <meta content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" http-equiv="refresh">
 
