--- a/code/index.html
+++ b/code/index.html
@@ -18,8 +18,9 @@
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
-    <meta content="Allyce's Website" name="twitter:title">
-    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="Source Code" name="twitter:title">
+    <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
+          name="twitter:description">
     <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <meta content="0; url=https://github.com/AllyToAll/AllyToAll.github.io" http-equiv="refresh">
