--- a/likes/index.html
+++ b/likes/index.html
@@ -16,8 +16,8 @@
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
-    <meta content="Allyce's Website" name="twitter:title">
-    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
+    <meta content="Likes" name="twitter:title">
+    <meta content="Things I like :3" name="twitter:description">
     <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
