--- a/studies/index.html
+++ b/studies/index.html
@@ -16,9 +16,9 @@
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
-    <meta content="Allyce's Website" name="twitter:title">
-    <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
+    <meta content="Studies" name="twitter:title">
+    <meta content="A page containing a bunch of studies" name="twitter:description">
+    <meta content="https://allytoall.github.io/thumbnails/studies.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
