--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     <a class="btn white" href="/likes">
         Things I liked
     </a><br>
+    <a class="btn white" href="/studies">
+        Studies I liked
+    </a><br>
     <a class="btn gpg" href="/gpg">
         <img alt=""
              class="invert" src="/thumbnails/gnuprivacyguard.svg">
