--- a/discord/index.html
+++ b/discord/index.html
@@ -11,14 +11,14 @@
     <meta content="Discord" property="og:title"/>
     <meta content="Discord" property="og:site_name">
     <meta content="Allyce's Discord Profile" property="og:description"/>
-    <meta content="https://allytoall.github.io/thumbnails/discord.svg" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/discord.png" property="og:image"/>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="Discord" name="twitter:title">
     <meta content="Allyce's Discord Profile" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/discord.svg" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/discord.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
