--- a/games/index.html
+++ b/games/index.html
@@ -11,14 +11,14 @@
     <meta content="Games" property="og:title"/>
     <meta content="Games" property="og:site_name">
     <meta content="Allyce's Games" property="og:description"/>
-    <meta content="https://allytoall.github.io/thumbnails/controller.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/games.png" property="og:image"/>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="Games" name="twitter:title">
     <meta content="Allyce's Games" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/controller.png" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/games.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
