--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -5,20 +5,20 @@
 
     <link href="https://allytoall.github.io/aboutme" rel="canonical">
     <meta content="Welcome to Allyce's silly little website :)" name="description"/>
-    
+
     <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/aboutme" property="og:url"/>
     <meta content="Allyce's Website" property="og:title"/>
     <meta content="Allyce's Website" property="og:site_name">
     <meta content="Welcome to Allyce's silly little website :)" property="og:description"/>
-    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/aboutme.png" property="og:image"/>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="Allyce's Website" name="twitter:title">
     <meta content="Welcome to Allyce's silly little website :)" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/aboutme.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
