--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
 
     <link href="https://allytoall.github.io/blahaj" rel="canonical">
-    <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
+    <meta content="Allyce's Blahaj :3"
           name="description"/>
 
     <meta content="website" property="og:type"/>
     <meta content="https://allytoall.github.io/blahaj" property="og:url"/>
     <meta content="Blahaj" property="og:title"/>
     <meta content="Blahaj" property="og:site_name">
-    <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
+    <meta content="Allyce's Blahaj :3"
           property="og:description"/>
     <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.svg" property="og:image"/>
 
@@ -19,11 +19,9 @@
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="Blahaj" name="twitter:title">
-    <meta content="Allyce's Blahaj :3 This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte"
+    <meta content="Allyce's Blahaj :3"
           name="twitter:description">
     <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.svg" name="twitter:image">
-
-    <meta content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" http-equiv="refresh">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -31,11 +29,22 @@
     <link href="/thumbnails/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
     <meta content="Allyce's Site" name="apple-mobile-web-app-title"/>
     <link href="/thumbnails/site.webmanifest" rel="manifest"/>
-    <title>Redirecting...</title>
+    <title>Blahaj</title>
 </head>
-<body>
-<p>This is a redirect to https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte<br>
-    If you are not redirected automatically, <a href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">click
-        here</a>.</p>
+<body class="page">
+<iframe
+        class="page-iframe"
+        loading="lazy"
+        referrerpolicy="no-referrer"
+        src="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
+</iframe>
+<div class="page-footer">
+    <a class="btn gray" href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
+        To Blahaj Website
+    </a>
+    <a class="btn gray" href="/">
+        Return
+    </a>
+</div>
 </body>
 </html>
