--- a/likes/index.html
+++ b/likes/index.html
@@ -11,14 +11,14 @@
     <meta content="Likes" property="og:title"/>
     <meta content="Likes" property="og:site_name">
     <meta content="Things I like :3" property="og:description"/>
-    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/likes.png" property="og:image"/>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="Likes" name="twitter:title">
     <meta content="Things I like :3" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/likes.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
