--- a/links/index.html
+++ b/links/index.html
@@ -18,7 +18,7 @@
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="Links" name="twitter:title">
     <meta content="Allyce's Links" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/links.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
