--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+
     <link href="https://allytoall.github.io/pronouns" rel="canonical">
     <meta content="Allyce's Pronoun Page" name="description"/>
 
@@ -18,7 +18,7 @@
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="Pronouns" name="twitter:title">
     <meta content="Allyce's Pronoun Page" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/pronounsdotpage.svg" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
