--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -11,14 +11,14 @@
     <meta content="Pronouns" property="og:title"/>
     <meta content="Pronouns" property="og:site_name">
     <meta content="Allyce's Pronoun Page" property="og:description"/>
-    <meta content="https://allytoall.github.io/thumbnails/pronounsdotpage.svg" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/pronouns.png" property="og:image"/>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="Pronouns" name="twitter:title">
     <meta content="Allyce's Pronoun Page" name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/pronounsdotpage.svg" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/pronouns.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
@@ -38,6 +38,9 @@
         src="https://en.pronouns.page/card/@Allyce">
 </iframe>
 <div class="page-footer">
+    <a class="btn gray" href="https://en.pronouns.page/@Allyce">
+        To pronoun page
+    </a>
     <a class="btn gray" href="/">
         Return
     </a>
