--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -13,7 +13,7 @@
     <meta content="Blahaj" property="og:site_name">
     <meta content="Allyce's Blahaj :3"
           property="og:description"/>
-    <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.svg" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/blahaj.png" property="og:image"/>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
@@ -21,7 +21,7 @@
     <meta content="Blahaj" name="twitter:title">
     <meta content="Allyce's Blahaj :3"
           name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/Blobhaj_Default.svg" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/blahaj.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
