--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
     <meta content="Source Code" property="og:site_name">
     <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
           property="og:description"/>
-    <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
+    <meta content="https://allytoall.github.io/thumbnails/code.png" property="og:image"/>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
@@ -21,7 +21,7 @@
     <meta content="Source Code" name="twitter:title">
     <meta content="Website's source code This is a redirect to https://github.com/AllyToAll/AllyToAll.github.io"
           name="twitter:description">
-    <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
+    <meta content="https://allytoall.github.io/thumbnails/code.png" name="twitter:image">
 
     <meta content="0; url=https://github.com/AllyToAll/AllyToAll.github.io" http-equiv="refresh">
 
