--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     <a class="btn white" href="/games">
         <img alt="" class="invert" src="/thumbnails/controller.png"> Games
     </a><br>
+    <a class="btn white" href="/hoi4">
+        <img alt="" class="invert" src="/thumbnails/controller.png"> Weekend HoI4 Gamenights
+    </a><br>
     <a class="btn blahaj" href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
         <img alt="" src="/thumbnails/Blobhaj_Default.svg"> Blåhaj
     </a><br>
