--- a/hoi4/index.html
+++ b/hoi4/index.html
@@ -10,14 +10,14 @@
     <meta content="https://allytoall.github.io/hoi4" property="og:url"/>
     <meta content="HoI4" property="og:title"/>
     <meta content="HoI4" property="og:site_name">
-    <meta content="HoI4" property="og:description"/>
+    <meta content="Weekend HoI4 Gamenights" property="og:description"/>
     <meta content="https://allytoall.github.io/thumbnails/index.png" property="og:image"/>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@AllyToAll1" name="twitter:site">
     <meta content="@AllyToAll1" name="twitter:creator">
     <meta content="HoI4" name="twitter:title">
-    <meta content="HoI4" name="twitter:description">
+    <meta content="Weekend HoI4 Gamenights" name="twitter:description">
     <meta content="https://allytoall.github.io/thumbnails/index.png" name="twitter:image">
 
     <link href="/thumbnails/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
