--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         Studies I liked
     </a><br>
     <a class="btn gpg" href="/gpg">
-        <img alt=""
-             class="invert" src="/thumbnails/gnuprivacyguard.svg">
+        <img alt="" class="invert" src="/thumbnails/gnuprivacyguard.svg">
         GnuPG Public Key
     </a><br>
     <a class="btn github" href="https://github.com/AllyToAll/AllyToAll.github.io">
