Allyce's Carrier Overcrowding Calculator

--- a/hoi4/acc/index.html
+++ b/hoi4/acc/index.html
@@ -26,7 +26,7 @@
     <link href="/thumbnails/favicon.svg" rel="icon" type="image/svg+xml"/>
     <link href="/thumbnails/favicon.ico" rel="shortcut icon"/>
     <link href="/thumbnails/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
-    <meta content="AOCC" name="apple-mobile-web-app-title"/>
+    <meta content="ACOC" name="apple-mobile-web-app-title"/>
     <link href="/thumbnails/site.webmanifest" rel="manifest"/>
     <title>Allyce's Carrier Calculator</title>
     <link href="/css/output.css" rel="stylesheet">
