Allyce's Carrier Overcrowding Calculator

--- a/hoi4/acc/index.html
+++ b/hoi4/acc/index.html
@@ -28,14 +28,14 @@
     <link href="/thumbnails/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
     <meta content="ACOC" name="apple-mobile-web-app-title"/>
     <link href="/thumbnails/site.webmanifest" rel="manifest"/>
-    <title>Allyce's Carrier Calculator</title>
+    <title>Allyce's Carrier Overcrowding Calculator</title>
     <link href="/css/output.css" rel="stylesheet">
     <script src="/js/urlHandling.js"></script>
     <script src="/js/carrierCalc.js"></script>
 </head>
 <body class="background">
 <div class="input">
-    <p class="title">Carrier Inputs</p>
+    <p class="title">Allyce's Carrier Overcrowding Calculator</p>
     <label>
         Deck Size: <input id="deckSize" max="190" min="10" step="10" type="number" value="60">
     </label><br>
