Allyce's Carrier Overcrowding Calculator

--- a/hoi4/acoc/index.html
+++ b/hoi4/acoc/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
 
-    <link href="https://allytoall.github.io/hoi4/acc" rel="canonical">
+    <link href="https://allytoall.github.io/hoi4/acoc" rel="canonical">
     <meta content="Allyce's Overcrowding Carrier Calculator" name="description"/>
 
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/hoi4/acc" property="og:url"/>
+    <meta content="https://allytoall.github.io/hoi4/acoc" property="og:url"/>
     <meta content="Allyce's Carrier Overcrowding Calculator" property="og:title"/>
     <meta content="Allyce's Carrier Overcrowding Calculator" property="og:site_name">
     <meta content="Allyce's Carrier Overcrowding Calculator to determine optimum carrier overcrowding"
