--- a/gpg/index.html
+++ b/gpg/index.html
@@ -32,9 +32,9 @@
 </head>
 <body class="background">
 <div class="input">
-    <a class="title">
+    <p class="title">
         GnuPG Public Key
-    </a><br>
+    </p><br>
     <a class="btn green" href="https://github.com/AllyToAll/AllyToAll.github.io/blob/main/publickey.asc">
         View
     </a>
