--- a/hoi4/acoc/index.html
+++ b/hoi4/acoc/index.html
@@ -109,7 +109,7 @@
     <p>Max planes refers to the ideal amount of planes you should put on the carrier, and effective planes refers to how
         many will fly after all debuffs are applied. This calculator is designed to determine what the ideal amount of
         max planes is to have the absolute maximum number of effective planes</p>
-    <a class="btn gray" href="/">
+    <a class="btn gray" href="/hoi4">
         Return
     </a>
 </div>
