--- a/hoi4/server/index.html
+++ b/hoi4/server/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
 
-    <link href="https://allytoall.github.io/hoi4" rel="canonical">
+    <link href="https://allytoall.github.io/hoi4/server" rel="canonical">
     <meta content="HoI4" name="description"/>
 
     <meta content="website" property="og:type"/>
-    <meta content="https://allytoall.github.io/hoi4" property="og:url"/>
+    <meta content="https://allytoall.github.io/hoi4/server" property="og:url"/>
     <meta content="HoI4" property="og:title"/>
     <meta content="HoI4" property="og:site_name">
     <meta content="Weekend HoI4 Gamenights" property="og:description"/>
@@ -30,15 +30,17 @@
     <link href="/css/output.css" rel="stylesheet">
     <script src="/js/urlHandling.js"></script>
 </head>
-<body class="background">
-<div class="input">
-    <a class="btn green" href="/hoi4/server">
-        Weekend HoI4 Gamenights
-    </a>
-    <a class="btn red" href="/hoi4/acoc">
-        Allyce's Carrier Overcrowding Calculator
-    </a>
-    <a class="btn gray" href="/">
+<body class="page">
+<iframe
+        allowtransparency="true"
+        class="page-iframe"
+        frameborder="0"
+        height="500"
+        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+        src="https://discord.com/widget?id=1469373799353946154&theme=dark"
+        width="350"></iframe>
+<div class="page-footer">
+    <a class="btn gray" href="/hoi4">
         Return
     </a>
 </div>
