--- a/hoi4/guide/index.html
+++ b/hoi4/guide/index.html
@@ -68,7 +68,7 @@
     </li>
     <li>All-Arms Anti-Tank Defence - AT</li>
     <li style="display: flex; align-items: center; margin-right: 10px;">
-        <img alt="" height="45" src="../../thumbnails/Static_Warfare.png" width="45"/>Static Warfare - Defence
+        <img alt="" height="45" src="/thumbnails/Static_Warfare.png" width="45"/>Static Warfare - Defence
     </li>
 </ul>
 <br>
@@ -77,7 +77,7 @@
 </ul>
 <ul>
     <li style="display: flex; align-items: center; margin-right: 10px;">
-        <img alt="" height="64" src="../../thumbnails/Grand_Battle_Plan.png" width="64"/><b>Grand Battleplan</b>
+        <img alt="" height="64" src="/thumbnails/Grand_Battle_Plan.png" width="64"/><b>Grand Battleplan</b>
     </li>
 </ul>
 <ul>
